--- a/dot_config/waybar/style.scss
+++ b/dot_config/waybar/style.scss
@@ -1,6 +1,6 @@
 /// NOTE: COLORS AUTO-GENERATED (DON'T CHANGE THESE LINES)
-$color0: #11151F;
-$color1: #78a9ed;
+$color0: #030303;
+$color1: #777777;
 $color2: #5063a6;
 $color3: #c26c81;
 $color4: #696aa8;
@@ -14,7 +14,7 @@ $color11: #8d4155;
 $color12: #3d4176;
 $color13: #202e5f;
 $color14: #22396a;
-$color15: #f1f4fc;
+$color15: #eeeeec;
 
 $bg: $color0;
 $fg: $color15;
