--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,57 +1,58 @@
 * {
   border: none;
   font-size: 12px;
-  font-family: "Noto Sans Display", "Material";
+  font-family: "Inter Medium", "Material";
   text-shadow: none;
   min-height: 0px;
   margin: 1px 0;
 }
 
 window#waybar {
-  color: #eeeeec;
-  background: black;
+  color: #F0F0F0;
+  background: rgba(25, 31, 34, 0.9);
 }
 
 tooltip {
-  background: rgba(3, 3, 3, 0.96);
+  background: rgba(25, 31, 34, 0.98);
   padding: 0;
 }
 tooltip label {
   padding: 0 15px;
+  color: #F0F0F0;
   margin: 0;
-  font-family: "Liberation Sans";
+  font-family: "Inter Medium";
   font-size: 14px;
 }
 
 #workspaces, #taskbar {
   min-height: 0;
-  background-color: #060606;
+  background-color: rgba(36, 44, 49, 0.5);
   border-radius: 3px;
-  box-shadow: 0 0 8px -3px rgba(0, 0, 0, 0.6), inset 0 0 3px -3px rgba(119, 119, 119, 0.17);
+  box-shadow: 0 0 12px -5px rgba(0, 0, 0, 0.6), inset 0 0 3px -3px rgba(9, 15, 18, 0.17);
   margin: 0 3px;
   padding: 0;
 }
 #workspaces button, #taskbar button {
   margin: 0px;
   padding: 1px 7px;
-  color: #6c6c6c;
+  color: #DADADA;
   background-color: transparent;
   border-radius: 0;
 }
 #workspaces button:hover, #taskbar button:hover {
-  color: #eeeeec;
+  color: #F0F0F0;
   background: initial;
-  background-color: #242424;
+  background-color: #161b1d;
 }
 #workspaces button.focused, #taskbar button.focused {
-  color: #eeeeec;
-  background: rgba(119, 119, 119, 0.1);
+  color: #F0F0F0;
+  background: #2f3a3f;
 }
 #workspaces button.focused:hover, #taskbar button.focused:hover {
-  background-color: #242424;
+  background-color: #161b1d;
 }
 #workspaces button.urgent, #taskbar button.urgent {
-  color: #777777;
+  color: #090F12;
 }
 
 #battery,
@@ -61,18 +62,10 @@ tooltip label {
   margin: 0 3px 0 0;
   padding: 0 10px;
   font-size: 13px;
-  box-shadow: 0 0 8px -3px rgba(0, 0, 0, 0.6), inset 0 0 3px -3px rgba(119, 119, 119, 0.17);
-  background: #060606;
-  color: #030303;
+  box-shadow: 0 0 8px -3px rgba(0, 0, 0, 0.6), inset 0 0 3px -3px rgba(9, 15, 18, 0.17);
+  background: rgba(36, 44, 49, 0.5);
+  color: #F0F0F0;
   border-radius: 3px;
-}
-
-#network {
-  background: #C792EA;
-}
-
-#pulseaudio {
-  background: #FFCB6B;
 }
 
 @keyframes batflow {
@@ -86,15 +79,12 @@ tooltip label {
 @keyframes batblink {
   from {
     background-color: #FF0000;
-    color: #eeeeec;
+    color: #F0F0F0;
   }
   to {
     background-color: #0000FF;
-    color: #030303;
+    color: #191F22;
   }
-}
-#battery {
-  background: #82AAFF;
 }
 #battery.critical:not(.charging) {
   animation: batblink 0.4s linear infinite alternate;
