--- a/dot_config/waybar/style.scss
+++ b/dot_config/waybar/style.scss
@@ -29,7 +29,7 @@ $shadow: 0 0 12px -5px rgba(#000, .6), inset 0 0 3px -3px rgba($color1, .17);
 * {
   border: none;
   font-size: 12px;
-  font-family: "Inter Medium", "Material";
+  font-family: "Inter", "Material";
   text-shadow: none;
   min-height: 0px; // fake min height;
   margin: 1px 0;
